force-app/main/default/objects/OAuth_integration__c/OAuth_integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OAuth_integration</label>
</CustomObject>