force-app/main/default/objects/OAuth_integration__c/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <label>clientId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>