force-app/main/default/objects/OAuth_integration__c/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <label>clientSecret</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>