force-app/main/default/objects/OAuth_integration__c/fields/destURL__c.field-meta.xml
<CustomField>
    <fullName>destURL__c</fullName>
    <label>destURL</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>