force-app/main/default/objects/OAuth_integration__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>